# dash-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  generate_secret_key  pyproject.toml  requirements.txt
api/: urls.py  views.py
backend/: db.sqlite3  settings.py
backend/backend/: settings.py  urls.py
backend/decks/: permissions.py  urls.py
backend/decks/migrations/: 0001_initial.py  0002_card.py  0003_delete_card.py
cards/: models.py  serializer.py  urls.py  views.py
decks/: models.py  permissions.py  serializers.py  urls.py  views.py
decks/migrations/: 0004_card.py  0005_delete_card.py
server/: settings.py
users/: serializer.py  urls.py  views.py
